# OClabs

./: README.md  agent_api.py  pyproject.toml  requirements.txt
opt-pulse/: GEMINI.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
opt-pulse/core/: database.py
opt-pulse/data/: campaign_metrics.csv  contacts.csv  contacts_loyalty.csv  customers.csv  sales.csv  sku.csv  templates.csv  transactions.csv
opt-pulse/schemas/: models.py
opt-pulse/services/: ai_service.py  brand_voice_agent.py  data_engine.py  image_service.py  smart_receipt_agent.py  triage_agent.py  vibe_agent.py
